_2008_05_13__09_30_00_ Chi-Hsiu Liang

  * Mesmer now force an DissociationReaction to have two products. Zero-point energy of the products are required for drawing
    potential energy surface in XML output and tunneling calculation.
  * Added virtual functions get_rctZPE() and get_pdtZPE() in Reaction, they return the ZPE's of reactant(s) and product(s),
    relative to the deepest well bottom. (Considering to prevent user from using get_zpe(), as this
    function returns raw ZPE's of the molecules. Will make it private/protected later.)
  * Microrate Calculator now calculates transition state flux instead of k(E)s
  * removed virtual bool grnAvrgMicroRateCoeffs(); added virtual void calcGrainRateCoeffs() in all reaction 
    types for converting TSFlux to k(E)s
  * Added  m_ActivationEnergy   in AssociationReaction
  * An additional option for getting k(E)s only, without building collision operators (me:calculateRateCoefficinetsOnly)
    -- Removed AddMicroRates() and rearranged codes within BuildSystemCollisionOperator(MesmerEnv &Env) for control purposes.
  * calcDensityOfStates() now decides whether to recalculate the DOS or not.
  * Added cell offset variable in ModelledMolecule to account for the cell shifts when converting from cell to grain
    -- see shiftCells(), set_grainValues() and m_cellOffset
  * Added a function double ModelledMolecule::get_relative_ZPE() that returns ZPE in wavenumber relative to the ZPE 
    of the deepest well bottom.
  * change m_grnZpe from int to double
  * bool SetGrainParams() is now moved to ReactionManager, user can choose whether to use the same number of cells
    throughout various conditions.
  * Added getHeatOfReactionInt() in Reaction, which force all energy values in integral wavenumbers. If energy values are
    in double the calculation of heat of reaction may differ by one wavenumber. For example,